# Zero-copy-Embedded-Pub-Sub-System

./: .gitmodules  .~cro-PubSub_MCU_SoC_方案.docx  Micro-PubSub_MCU_SoC_方案.docx  README.md  项目日至.md
.obsidian/: workspace.json
FreeRTOS_TETS/: .clangd  .mxproject  CMakeLists.txt  FreeRTOS_TETS.ioc  Makefile
FreeRTOS_TETS/.cursor/rules/: app-common-middleware.mdc  fatfs-sdio-logging.mdc  future-soc-bridge.mdc  generated-build-artifacts.mdc  project-core.mdc  stm32-core-generated-boundary.mdc
FreeRTOS_TETS/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_it.h
FreeRTOS_TETS/Core/Src/: dma.c  freertos.c  gpio.c  main.c  sdio.c  stm32f4xx_it.c  usart.c
FreeRTOS_TETS/app/include/: sysLED_Task.h  sys_monitor.h  systemTask.h
FreeRTOS_TETS/app/src/: sysLED_Task.c  sys_monitor.c  systemTask.c
FreeRTOS_TETS/bsp/include/: led.h
FreeRTOS_TETS/bsp/src/: led.c
FreeRTOS_TETS/cmake/stm32cubemx/: CMakeLists.txt
FreeRTOS_TETS/common/include/: sd_log.h  usart_log.h
FreeRTOS_TETS/common/src/: sd_log.c  usart_log.c
FreeRTOS_TETS/middleware/include/: mem_pool.h  topic_tree.h
FreeRTOS_test/Frist_test_FreeRTOS/: CMakeLists.txt  Frist_test_FreeRTOS.ioc
Micro-PubSub_test/: CMakeLists.txt  对于bug的自主想法  新旧代码对比改善.md
Micro-PubSub_test/Testing/: topic_tree_main_chain.mmd  topic_tree_mem_pool.mmd
Micro-PubSub_test/middleware/include/: mem_pool.h  topic_tree.h
Micro-PubSub_test/middleware/src/: mem_pool.c  topic_tree.c
Micro-PubSub_test/test/: test_mem_pool.c  test_topic_tree.c
test_Fatfs/: .mxproject  CMakeLists.txt  test_Fatfs.ioc
test_Fatfs/Core/Inc/: main.h  (+1 more)
(+13 files in other folders)
